[gd_scene load_steps=6 format=3 uid="uid://wqfvwdy3ui2u"]

[ext_resource type="Script" path="res://enemies/foods/code/melee_food.gd" id="1_u4xxk"]
[ext_resource type="PackedScene" uid="uid://d16mfgwqaknp1" path="res://enemies/enemy drops/egg_drop.tscn" id="2_sp38q"]
[ext_resource type="ArrayMesh" uid="uid://b7jkb4r8n74tm" path="res://game_egg.obj" id="3_qkhmc"]

[sub_resource type="BoxShape3D" id="BoxShape3D_4wcus"]

[sub_resource type="BoxShape3D" id="BoxShape3D_couqs"]

[node name="egg" type="CharacterBody3D" groups=["melee"]]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.51089, 0)
collision_layer = 2
collision_mask = 4
script = ExtResource("1_u4xxk")
node = ExtResource("2_sp38q")
lowest_speed = 1.0
highest_speed = 1.2
lowest_max_distance_to_pack = 6.0
highest_max_distance_to_pack = 15.0
lowest_panic_amount = 1.8
highest_panic_amount = 2.4
hp = 4
jump_timer = 17.0
can_jump = false
charge_force = 4.0
aggresion_range = 20
charge_cooldown = 1.6

[node name="GameEgg" type="MeshInstance3D" parent="."]
transform = Transform3D(0.495, 0, 0, 0, 0.55, 0, 0, 0, 0.495, 0, -0.483355, 0)
mesh = ExtResource("3_qkhmc")

[node name="CollisionShape3D" type="CollisionShape3D" parent="." groups=["melee"]]
transform = Transform3D(1.17, 0, 0, 0, 1, 0, 0, 0, 1.315, 0, 0, 0)
shape = SubResource("BoxShape3D_4wcus")

[node name="Area3D" type="Area3D" parent="."]
transform = Transform3D(1.17, 0, 0, 0, 1, 0, 0, 0, 1.315, 0, 0, 0)
collision_layer = 2
collision_mask = 2

[node name="CollisionShape3D" type="CollisionShape3D" parent="Area3D"]
transform = Transform3D(1.1, 0, 0, 0, 1.3, 0, 0, 0, 1.1, 0, 0, 0)
shape = SubResource("BoxShape3D_couqs")

[node name="Timer" type="Timer" parent="."]

[node name="agro_timer" type="Timer" parent="."]

[connection signal="area_entered" from="Area3D" to="." method="_on_area_3d_area_entered"]
[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
[connection signal="timeout" from="agro_timer" to="." method="_on_agro_timer_timeout"]
